[package]
name = "it-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = "4.3.9"
colored = "2.0.4"
itertools = "0.11.0"

[profile.release]
debug = 1
lto = true

[[bin]]
name = "it"
path = "src/main.rs"
