[package]
name = "itrs"
authors = ["Lucas Culverhouse <lucasculverhouse@gmail.com>"]
version = "0.1.3"
edition = "2021"
rust-version = "1.70"
homepage = "https://github.com/lsculv/itrs"
repository = "https://github.com/lsculv/itrs"
license = "BSD-3-Clause"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["iterator", "trim"]
description = "Provides command-line access to several useful Rust iterator and string methods"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.9", features = ["cargo"] }
colored = "2.0.4"
itertools = "0.11.0"
thiserror = "1.0.43"

[profile.release]
strip = true
lto = true

[[bin]]
name = "it"
path = "src/main.rs"
